# contracts-acta-spikes

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
contracts/vc-issuer-registry/: Cargo.toml  README.md
contracts/vc-issuer-registry/src/: contract.rs  error.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/vc-revocation-registry/: .buildinfo  Cargo.toml  README.md
contracts/vc-revocation-registry/src/: contract.rs  error.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/vc-schema-registry/: Cargo.toml  README.md
contracts/vc-schema-registry/src/: contract.rs  error.rs  events.rs  lib.rs  storage.rs  test.rs
docs/setups/: setup-fuzzing.md
scripts/: build.sh  deploy.sh  release.sh
