[workspace]
resolver = "2"

members = [
    "contracts/vc-issuer-registry",
]

[workspace.package]
version = "0.21.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ACTA-Team/contracts-acta-spikes"

[workspace.dependencies]
soroban-sdk = { version = "23.4.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
